<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KuaiDian</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forgetpwd">忘记密码？</string>
	<string name="exit">退出</string>
	<string name="remember_pwd">记住密码</string>
	<string name="bt_enter">进入应用</string>
	<string name="acountname">账号：</string>
	<string name="exitlogin">退出登入</string>
	<string name="fpwd">找回密码</string>
	<string name="change">点击图片换一张</string>
	<string name="next">下一步</string>
	<string name="newcode">输入新密码:</string>
	<string name="finish">完成</string>
	
</resources>