<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/meishi"
    android:orientation="vertical" >

    <Button
        android:id="@+id/bt_enter"
        android:layout_width="90dp"
        android:layout_height="56dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#ff336699"
        android:textColor="@android:color/white"
        android:text="@string/bt_enter" />

    <Button
        android:id="@+id/bt_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#00000000"
        android:textSize="15sp"
        android:text="@string/exitlogin" />

    <TextView
        android:id="@+id/tV_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bt_exit"
        android:layout_alignBottom="@+id/bt_exit"
        android:layout_toLeftOf="@+id/bt_exit"
        android:text="TextView"
        android:textColor="@color/green"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tv_acountname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tV_userName"
        android:layout_alignBottom="@+id/tV_userName"
        android:layout_toLeftOf="@+id/tV_userName"
        android:text="@string/acountname"
        android:textSize="17sp" />

</RelativeLayout>