<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true" >

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center" >

        <FrameLayout
            android:id="@+id/username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:gravity="center" >

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="请输入账号"
                android:inputType="number"
                android:maxLength="20"
                android:paddingLeft="55dp"
                android:paddingRight="60dp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/bt1_username_clear"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_clear"
                android:visibility="invisible" />

            <ImageView
                android:layout_width="31dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/login_usr_in_img"
                android:visibility="visible" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/usercode_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_layout"
            android:layout_marginTop="6dp"
            android:gravity="center" >

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="请输入密码"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="55dp"
                android:paddingRight="60dp"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="31dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/login_code_in_img"
                android:visibility="visible" />

            <Button
                android:id="@+id/bt2_username_clear"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_clear"
                android:visibility="invisible" >
            </Button>

            <Button
                android:id="@+id/bt_pwd_eye"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="33dp"
                android:visibility="invisible"
                android:background="@drawable/button_eye_n" />
        </FrameLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usercode_layout"
            android:layout_marginTop="30dp"
            android:background="#ff336699"
            android:text="@string/login"
            android:textColor="@android:color/white" />
        <Button android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login"
            android:layout_marginTop="10dp"
            android:background="#ff336699"
            android:text="@string/exit"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/forgetpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/login"
            android:layout_below="@id/exit"
            android:gravity="left|center_vertical"
            android:background="#00000000"
            android:text="@string/forgetpwd"
            android:textSize="16sp" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/login"
            android:gravity="left|center_vertical"
            android:layout_below="@id/exit"
            android:background="#00000000"
            android:text="@string/register"
            android:textSize="16sp"
            android:visibility="visible" />

        <CheckBox
            android:id="@+id/remember_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usercode_layout"
            android:text="@string/remember_pwd" />
        
    </RelativeLayout>

</RelativeLayout>