<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/forgetpwd"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="38dp" >

        <TextView
            android:id="@+id/findpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/fpwd"
            android:textColor="@color/orange"
            android:textSize="25sp" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/findusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:gravity="center" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="33dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/login_usr_in_img"
            android:visibility="visible" />

        <EditText
            android:id="@+id/account"
            android:layout_width="264dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:hint="用户名/邮箱/手机"
            android:textColor="@color/black"
            android:inputType="number"
            android:maxLength="20"
            android:paddingLeft="50dp"
            android:paddingRight="0dp"
            android:textSize="18sp" >

            <requestFocus />
        </EditText>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/findusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
     
        android:gravity="center" >

        <EditText
            android:id="@+id/yanzheng"
            android:layout_width="94dp"
            android:layout_height="51dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp" />
        <ImageView  
            android:id="@+id/showCode"  
            android:layout_width="94dp"
            android:layout_height="51dp"  
            android:layout_marginLeft="130dp"
            android:layout_marginRight="0dp" 
             />

        <Button
            android:id="@+id/button2"
            android:layout_width="83dp"
            android:layout_height="50dp"
            android:layout_marginLeft="220dp"
            android:layout_marginRight="0dp"
            android:textSize="13sp"
            android:text="@string/change" />

    </FrameLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="95dp"
        android:layout_height="55dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="30dp"
        android:text="@string/next" />

</LinearLayout>